--- a/Single_Item_Newsvendor.ipynb
+++ b/Single_Item_Newsvendor.ipynb
@@ -370,8 +370,8 @@
     "    wcrisk_rob[i] = RC_newsvendor_riskmin(sets,p,d,r,par,par_news,phi_conj, h_conj)[1]\n",
     "    res_nom = nominal_solve(sets,p,d,par,par_news, h_eva)[0]\n",
     "    wcrisk_nom[i] = robustcheck_newsvendor(res_nom,d,r,p,par,par_news,h_func, phi_func)[0]\n",
-    "plt.plot(nsize, wcrisk_rob, label = 'wc risk evaluation robust solution')\n",
-    "plt.plot(nsize, wcrisk_nom,'--', label = ' wc risk evaluation nominal solution')\n",
+    "plt.plot(nsize, wcrisk_rob, label = 'robust solution')\n",
+    "plt.plot(nsize, wcrisk_nom,'--', label = 'nominal solution')\n",
     "plt.xlabel('n')\n",
     "plt.ylabel('worst case risk evaluation')\n",
     "plt.legend()"
