--- a/Multi_Items_Newsvendor.ipynb
+++ b/Multi_Items_Newsvendor.ipynb
@@ -5,7 +5,7 @@
    "id": "874e9933",
    "metadata": {},
    "source": [
-    "As an extension of the single-item newsvendor problem, we study the multi-item problem where multiple items have their own uncertain demand. Let $d^{(j)}_{i}$ be the $i$-th realization of the $j$-th item's demand, $i=1,2,3$. \n",
+    "As an extension of the single-item newsvendor problem, we study the multi-item problem where multiple items have their own uncertain demand. Let $d^{(j)}_{i}$ be the $i$-th realization of the $j$-th item's demand, where $i=1,2,3$. \n",
     "We assume that the demand takes on the same possible values for all items, i.e., $d^{(j)}_{i}\\in \\{4,8,10\\}$ for all $j$. \n",
     "We take $j=1,2,3$ and consider the sum of the individual profit functions\n",
     "\\begin{align}\n",
