--- a/Multi_Items_Newsvendor.ipynb
+++ b/Multi_Items_Newsvendor.ipynb
@@ -18,8 +18,8 @@
     "with $v_j,s_j,l_j,c_j$ the parameters corresponding to item $j$. Since each realization of $d^{(j)}$ contributes to a possible realization of $r_{\\mathrm{tot}}(\\mathbf{y},\\mathbf{d})$, there are in total $N=3^3=27$ possible realizations. The worst case risk evaluation minimization problem with Kullback-Leibler divergence and the CVaR distortion risk measure is formulated as\n",
     "\\begin{align}\n",
     "\\begin{split}\n",
-    "    \\min_{0\\leq y\\leq 10, t\\in \\mathbb{R}}\\{t|\n",
-    "        &\\sup_{(\\mathbf{q},\\mathbf{\\bar{q}})\\in \\mathcal{U}_{\\phi_{kl},h_{cv}}}-\\sum^{27}_{k=1}\\bar{q}_kr_{\\mathrm{tot},k}(\\mathbf{y},\\mathbf{d})\\leq t\\}.\n",
+    "    \\min_{0\\leq y\\leq 10, t\\in \\mathbb{R}}\\left\{t~\middle |~\n",
+    "        \\sup_{(\\mathbf{q},\\mathbf{\\bar{q}})\\in \\mathcal{U}_{\\phi_{kl},h_{cv}}}-\\sum^{27}_{k=1}\\bar{q}_kr_{\\mathrm{tot},k}(\\mathbf{y},\\mathbf{d})\\leq t\\right\}.\n",
     "\\end{split}\n",
     "\\end{align}\n",
     "Here, $\\mathbf{p}\\in \\mathbb{R}^{27}$ and is determined by considering the probability of each combination of realizations of $(d^{(1)},d^{(2)},d^{(3)})$, which is the product of the probabilities $\\mathbf{p}^{(1)},\\mathbf{p}^{(2)},\\mathbf{p}^{(3)}$ of each individual realization. \n",
