--- a/Single_Item_Newsvendor.ipynb
+++ b/Single_Item_Newsvendor.ipynb
@@ -28,12 +28,12 @@
    "source": [
     "We assume the risk preference of the seller is represented by a risk measure induced by the distortion function $h_{cv}(x)=\\min\\{x/(1-\\alpha_0),1\\}$ and the seller's uncertainty in the probability $\\mathbf{p}$ is measured by the Kullback-Leibler divergence function $\\phi_{kl}(x)=x\\log(x)-x+1$. This leads to the following robust optimization problem, where the worst case risk evaluation is minimized\n",
     "\\begin{align}\n",
-    "\\min_{0\\leq y\\leq 10, t\\in \\mathbb{R}}\\{t|\\sup_{(\\mathbf{q},\\mathbf{\\bar{q}})\\in \\mathcal{U}_{\\phi_{kl},h_{cv}}}-\\sum^3_{i=1}\\bar{q}_ir(d_i,y)\\leq t\\}.\n",
+    "\\min_{0\\leq y\\leq 10, t\\in \\mathbb{R}}\\{t|\\sup_{(\\mathbf{q},\\mathbf{\\bar{q}})\\in \\mathcal{U}_{\\phi_{kl},h_{cv}}(\mathbf{p})}-\\sum^3_{i=1}\\bar{q}_ir(d_i,y)\\leq t\\}.\n",
     "\\end{align}\n",
     "Where\n",
     "\\begin{align}\n",
     "\\begin{split}\\label{uncertaintyset}\n",
-    "   \\mathcal{U}_{\\phi_{kl},h_{cv}}=\\{(\\mathbf{q},\\bar{\\mathbf{q}})\\in \\mathbb{R}^{6}_{\\geq 0}&: \\sum^3_{i=1} q_i=1,~\\sum^{3}_{i=1} \\bar{q}_i=1,~\\sum^3_{i=1}p_i\\phi_{kl}(\\frac{q_i}{p_i})-r\\leq 0\\\\\n",
+    "   \\mathcal{U}_{\\phi_{kl},h_{cv}}(\mathbf{p})=\\{(\\mathbf{q},\\bar{\\mathbf{q}})\\in \\mathbb{R}^{6}_{\\geq 0}&: \\sum^3_{i=1} q_i=1,~\\sum^{3}_{i=1} \\bar{q}_i=1,~\\sum^3_{i=1}p_i\\phi_{kl}(\\frac{q_i}{p_i})-r\\leq 0\\\\\n",
     "    &\\bar{q}_1\\leq h_{cv}(q_1),~ \\bar{q}_2\\leq h_{cv}(q_2),~\\bar{q}_3\\leq h_{cv}(q_3)\\\\\n",
     "    &\\bar{q}_1+\\bar{q}_2\\leq h_{cv}(q_1+q_2),~ \\bar{q}_1+\\bar{q}_3\\leq h_{cv}(q_1+q_3),\\bar{q}_2+\\bar{q}_3\\leq h_{cv}(q_2+q_3)\n",
     "    \\}.\n",
