--- a/Single_Item_Newsvendor.ipynb
+++ b/Single_Item_Newsvendor.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "We assume the risk preference of the seller is represented by a risk measure induced by the distortion function $h_{cv}(x)=\\min\\{x/(1-\\alpha_0),1\\}$ and the seller's uncertainty in the probability $\\mathbf{p}$ is measured by the Kullback-Leibler divergence function $\\phi_{kl}(x)=x\\log(x)-x+1$. This leads to the following robust optimization problem, where the worst case risk evaluation is minimized\n",
     "\\begin{align}\n",
-    "\\min_{0\\leq y\\leq 10, t\\in \\mathbb{R}}\left\\{t|\\sup_{(\\mathbf{q},\\mathbf{\\bar{q}})\\in \\mathcal{U}_{\\phi_{kl},h_{cv}}(\\mathbf{p})}-\\sum^3_{i=1}\\bar{q}_ir(d_i,y)\\leq t\right\\}.\n",
+    "\\min_{0\\leq y\\leq 10, t\\in \\mathbb{R}}\\left\\{t|\\sup_{(\\mathbf{q},\\mathbf{\\bar{q}})\\in \\mathcal{U}_{\\phi_{kl},h_{cv}}(\\mathbf{p})}-\\sum^3_{i=1}\\bar{q}_ir(d_i,y)\\leq t\\right\\}.\n",
     "\\end{align}\n",
     "Where\n",
     "\\begin{align}\n",
