--- a/Single_Item_Newsvendor.ipynb
+++ b/Single_Item_Newsvendor.ipynb
@@ -288,7 +288,7 @@
    "id": "2a3a5a0a",
    "metadata": {},
    "source": [
-    "We perform the following experiment to compare the robust solution to the nominal solution. We choose a range of (fictitious) sample size $n= 10, 20,\\ldots 200$. This sample size is purely artificial: we treat $\\mathbf{p}$ as estimated from a sample of size $n$. We also examine a range of quantile levels $\\alpha_0 = 0.4, 0.3, 0.2, 0.1$ for the distortion risk measure. For both the robust and the nominal solution, we compare their worst case risk evaluation. For the robust solution, the worst case risk evaluation is simply the objective value of the robust problem i.e. the worst case risk evaluation minimization problem. For the nominal solution, the worst case risk evaluation is the objective value of the robust problem evaluated in this solution, which can be calculated by the following function."
+    "We perform the following experiment to compare the robust solution to the nominal solution. We choose a range of (fictitious) sample size $n= 10, 20,\\ldots 200$. This sample size is purely artificial: we treat $\\mathbf{p}$ as estimated from a sample of size $n$. We also examine a range of quantile levels $\\alpha_0 = 0.4, 0.3, 0.2, 0.1$ for the distortion risk measure. For both the robust and the nominal solution, we compare their worst case risk evaluation. For the robust solution, the worst case risk evaluation is simply the objective value of the robust problem i.e. the worst-case risk evaluation minimization problem. For the nominal solution, the worst-case risk evaluation is the objective value of the robust problem evaluated in this solution, which can be calculated by the following function."
    ]
   },
   {
@@ -349,7 +349,7 @@
    "id": "e3122b85",
    "metadata": {},
    "source": [
-    "The following code performs the experiment and output the graph of the worst case risk evaluation of the robust and the nominal solutions, with respect to the sample size $n$."
+    "The following code performs the experiment and output the graph of the worst-case risk evaluation of the robust and the nominal solutions, with respect to the sample size $n$."
    ]
   },
   {
