--- a/Single_Item_Newsvendor.ipynb
+++ b/Single_Item_Newsvendor.ipynb
@@ -26,7 +26,7 @@
    "id": "fb8f609f",
    "metadata": {},
    "source": [
-    "We assume the risk preference of the seller is represented by a risk measure induced by the distortion function $h_{cv}(x)=\\min\\{x/(1-\\alpha_0),1\\}$ and the seller's uncertainty in the probability $\\mathbf{p}$ is measured by the Kullback-Leibler divergence function $\\phi_{kl}(x)=x\\log(x)-x+1$. This leads to the following robust optimization problem, where the worst case risk evaluation is minimized\n",
+    "We assume the risk preference of the seller is represented by a risk measure induced by the distortion function $h_{cv}(x)=\\min\\{x/(1-\\alpha_0),1\\}$ and the seller's uncertainty in the probability $\\mathbf{p}$ is measured by the Kullback-Leibler divergence function $\\phi_{kl}(x)=x\\log(x)-x+1$. This leads to the following robust optimization problem, where the worst-case risk evaluation is minimized\n",
     "\\begin{align}\n",
     "\\min_{0\\leq y\\leq 10, t\\in \\mathbb{R}}\\{t|\\sup_{(\\mathbf{q},\\mathbf{\\bar{q}})\\in \\mathcal{U}_{\\phi_{kl},h_{cv}}}-\\sum^3_{i=1}\\bar{q}_ir(d_i,y)\\leq t\\}.\n",
     "\\end{align}\n",
@@ -288,7 +288,7 @@
    "id": "2a3a5a0a",
    "metadata": {},
    "source": [
-    "We perform the following experiment to compare the robust solution to the nominal solution. We choose a range of (fictitious) sample size $n= 10, 20,\\ldots 200$. This sample size is purely artificial: we treat $\\mathbf{p}$ as estimated from a sample of size $n$. We also examine a range of quantile levels $\\alpha_0 = 0.4, 0.3, 0.2, 0.1$ for the distortion risk measure. For both the robust and the nominal solution, we compare their worst case risk evaluation. For the robust solution, the worst case risk evaluation is simply the objective value of the robust problem i.e. the worst-case risk evaluation minimization problem. For the nominal solution, the worst-case risk evaluation is the objective value of the robust problem evaluated in this solution, which can be calculated by the following function."
+    "We perform the following experiment to compare the robust solution to the nominal solution. We choose a range of (fictitious) sample size $n= 10, 20,\\ldots 200$. This sample size is purely artificial: we treat $\\mathbf{p}$ as estimated from a sample of size $n$. We also examine a range of quantile levels $\\alpha_0 = 0.4, 0.3, 0.2, 0.1$ for the distortion risk measure. For both the robust and the nominal solution, we compare their worst-case risk evaluation. For the robust solution, the worst-case risk evaluation is simply the objective value of the robust problem i.e. the worst-case risk evaluation minimization problem. For the nominal solution, the worst-case risk evaluation is the objective value of the robust problem evaluated in this solution, which can be calculated by the following function."
    ]
   },
   {
@@ -298,7 +298,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### This function compute the worst case risk evaluation given a solution y\n",
+    "### This function compute the worst-case risk evaluation given a solution y\n",
     "\n",
     "def robustcheck_newsvendor(y,d,r,p,par,par_news,h_func, phi_func):\n",
     "    N = len(p)\n",
