--- a/Multi_Items_Newsvendor.ipynb
+++ b/Multi_Items_Newsvendor.ipynb
@@ -15,7 +15,7 @@
     "\\begin{align}\n",
     "     r_j(d^{(j)},y_j)&=v_j\\min\\{d^{(j)},y_j\\}+s_j(y_j-d^{(j)})_+-l_j(d^{(j)}-y_j)_+-c_jy_j,\n",
     "\\end{align}\n",
-    "with $v_j,s_j,l_j,c_j$ the parameters corresponding to item $j$. Since each realization of $d^{(j)}$ contributes to a possible realization of $r_{\\mathrm{tot}}(\\mathbf{y},\\mathbf{d})$, there are in total $N=3^3=27$ possible realizations. The worst-case risk evaluation minimization problem with Kullback-Leibler divergence and the CVaR distortion risk measure is formulated as\n",
+    "with $v_j,s_j,l_j,c_j$ the parameters corresponding to item $j$. Since each realization of $d^{(j)}$ contributes to a possible realization of $r_{\\mathrm{tot}}(\\mathbf{d},\\mathbf{y})$, there are in total $N=3^3=27$ possible realizations. The worst-case risk evaluation minimization problem with Kullback-Leibler divergence and the CVaR distortion risk measure is formulated as\n",
     "\\begin{align}\n",
     "\\begin{split}\n",
     "    \\min_{0\\leq y\\leq 10, t\\in \\mathbb{R}}\\left\\{t~ \\middle |~\n",
