--- a/Single_Item_Newsvendor.ipynb
+++ b/Single_Item_Newsvendor.ipynb
@@ -13,7 +13,7 @@
    "id": "b8ea062b",
    "metadata": {},
    "source": [
-    "In the single-item newsvendor problem, a seller is uncertain about the demand of a certain product and has to decide in advance how many units of the product he/she wishes to order. The uncertainty in demand induces a loss, either in unsold items or in unmet demand. Let $d_i$ be the realization of the demand in state $i$. Let $c$ be the cost of one unit of order, $v>c$ be the selling price, $s<c$ be the salvage value per unsold item returned to the order factory, and $l$ be the loss per unit of unmet demand. Denote $y$ to be the number of items ordered. The profit function $r(d_i,y)$ is defined as\n",
+    "In the single-item newsvendor problem, a seller is uncertain about the demand of a certain product and has to decide in advance how many units of the product he/she wishes to order. The uncertainty in demand induces a loss, either in unsold items or in unmet demand. Let $d_i$ be the realization of the demand in state $i$. Let $c$ be the cost of one unit of order, $v>c$ be the selling price, $s<c$ be the salvage value per unsold item returned to the order factory, and $l$ be the loss per unit of unmet demand. Denote $y$ to be the number of items ordered. The profit function $r(d_i,y)$ is defined as:\n",
     "\\begin{align}\n",
     "    r(d_i,y)&:=v\\min\\{d_i,y\\}+s(y-d_i)_+-l(d_i-y)_+-cy\\nonumber\\\\\n",
     "    &= (s-v)(y-d_i)_+-l(d_i-y)_++(v-c)y.\n",
