--- a/Single_Item_Newsvendor.ipynb
+++ b/Single_Item_Newsvendor.ipynb
@@ -18,7 +18,7 @@
     "    r(d_i,y)&:=v\\min\\{d_i,y\\}+s(y-d_i)_+-l(d_i-y)_+-cy\\nonumber\\\\\n",
     "    &= (s-v)(y-d_i)_+-l(d_i-y)_++(v-c)y.\n",
     "\\end{align}\n",
-    "Here, we assume that $d_i\\in \\{4,8,10\\}$ with three possible realizations corresponding to low demand, medium demand, and high demand. The nominal probability of these realizations is assumed to be $\\mathbf{p}=\\{0.375,0.375,0.25\\}$. We assume the number of items ordered will not exceed the maximal demand, i.e., $y\\leq 10$. For the parameter values we take $v=6,l=4,s=2,c=4$"
+    "Here, we assume that $d_i\\in \\{4,8,10\\}$ with three possible realizations corresponding to low demand, medium demand, and high demand. The nominal probability of these realizations is assumed to be $\\mathbf{p}=\\{0.375,0.375,0.25\\}$. We assume the number of items ordered will not exceed the maximal demand, i.e., $y\\leq 10$. For the parameter values we take $v=6,l=4,s=2,c=4$."
    ]
   },
   {
