--- a/Single_Item_Newsvendor.ipynb
+++ b/Single_Item_Newsvendor.ipynb
@@ -91,7 +91,7 @@
    "id": "9910514c",
    "metadata": {},
    "source": [
-    "The reformulated robust problem can be solved by defining the following functions"
+    "The reformulated robust problem can be solved by defining the following functions."
    ]
   },
   {
