--- a/Single_Item_Newsvendor.ipynb
+++ b/Single_Item_Newsvendor.ipynb
@@ -148,13 +148,13 @@
    "id": "177554b3",
    "metadata": {},
    "source": [
-    "To compare the robust solution to the nominal solution, we also solve the nominal problem, where the risk evaluation is minimized with respect to the nominal probability $\\mathbf{p}$\n",
+    "To compare the robust solution to the nominal solution, we also solve the nominal problem, where the risk evaluation is minimized with respect to the nominal probability $\\mathbf{p}$:\n",
     "\\begin{align*}\n",
     "    \\min_{0\\leq y\\leq 10, t\\in \\mathbb{R}}\\{t|\\sup_{\\mathbf{\\bar{q}}\\in M_h(\\mathbf{p})}-\\sum^3_{i=1}\\bar{q}_ir(d_i,y)\\leq t\\},\n",
     "\\end{align*}\n",
     "where \n",
     "\\begin{align*}\n",
-    "    M_h(\\mathbf{p})=\\{\\mathbf{\\bar{q}}\\in \\mathbb{R}^3_{\\geq 0}|~\\sum^3_{i=1}\\bar{q}_i=1, \\sum_{k\\in I_j}\\bar{q}_k\\leq h(\\sum_{k\\in I_j}p_k), I_1,\\ldots,I_6.\\}\n",
+    "    M_h(\\mathbf{p})=\\{\\mathbf{\\bar{q}}\\in \\mathbb{R}^3_{\\geq 0}|~\\sum^3_{i=1}\\bar{q}_i=1, \\sum_{k\\in I_j}\\bar{q}_k\\leq h(\\sum_{k\\in I_j}p_k), I_1,\\ldots,I_6\\}.\n",
     "\\end{align*}\n",
     "Since the set $M_h(\\mathbf{p})$ consists of linear inequalities, the nominal problem can be easily reformulated to the following convex problem\n",
     "\\begin{align*}\n",
