--- a/Single_Item_Newsvendor.ipynb
+++ b/Single_Item_Newsvendor.ipynb
@@ -206,7 +206,7 @@
    "id": "2a3a5a0a",
    "metadata": {},
    "source": [
-    "We perform the following experiment to compare the robust solution to the nominal solution. We choose a range of (fictitious) sample size $n= 10, 20,\\ldots 200$. This sample size is purely artificial: we treat $\\mathbf{p}$ as estimated from a sample of size $n$. We also examine a range of quantile levels $\\alpha_0 = 0.4, 0.3, 0.2, 0.1$ for the distortion risk measure. For both the robust and the nominal solution, we compare their worst case risk evaluation. For the robust solution, the worst case risk evaluation is simply the objective value of the robust problem i.e. the worst case risk evaluation minimization problem. For the nominal solution, the worst case risk evaluation is the objective value of the robust problem evaluated in this solution, which can be calculated by the following function."
+    "We perform the following experiment to compare the robust solution to the nominal solution. We choose a range of (fictitious) sample size $n= 10, 20,\\ldots 200$. This sample size is purely artificial: we treat $\\mathbf{p}$ as if estimated from a sample of size $n$. We also examine a range of quantile levels $\\alpha_0 = 0.4, 0.3, 0.2, 0.1$ for the distortion risk measure. For both the robust and the nominal solution, we compare their worst-case risk evaluation. For the robust solution, the worst-case risk evaluation is simply the objective value of the robust problem i.e., the worst-case risk evaluation minimization problem. For the nominal solution, the worst-case risk evaluation is the objective value of the robust problem evaluated in this solution, which can be calculated by the following function."
    ]
   },
   {
@@ -216,7 +216,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### This function compute the worst case risk evaluation given a solution y\n",
+    "### This function compute the worst-case risk evaluation given a solution y\n",
     "\n",
     "def robustcheck_newsvendor(y,d,r,p,par,par_news,h_func, phi_func):\n",
     "    N = len(p)\n",
