--- a/Single_Item_Newsvendor.ipynb
+++ b/Single_Item_Newsvendor.ipynb
@@ -317,7 +317,7 @@
    "id": "c1cbbcb2-cad3-48a2-baa4-07a524a87063",
    "metadata": {},
    "source": [
-    "Similarly, we define the necessary variables for the distortion function"
+    "Similarly, we define the necessary variables for the distortion function."
    ]
   },
   {
