--- a/Single_Item_Newsvendor.ipynb
+++ b/Single_Item_Newsvendor.ipynb
@@ -349,7 +349,7 @@
    "id": "e3122b85",
    "metadata": {},
    "source": [
-    "The following code performs the experiment and output the graph of the worst case risk evaluation of the robust and the nominal solutions, with respect to the sample size $n$."
+    "The following codes perform the experiment and output the graph of the worst-case risk evaluation of the robust and the nominal solutions, with respect to the sample size $n$."
    ]
   },
   {
@@ -454,7 +454,7 @@
    "id": "ee796ac1",
    "metadata": {},
    "source": [
-    "The following code compute the robust solution and the nominal solution and calculate the risk of both solutions with respect to a sample of probability vectors."
+    "The following codes compute the robust solution and the nominal solution and calculate the risk of both solutions with respect to a sample of probability vectors."
    ]
   },
   {
