--- a/Robust_Portfolio.ipynb
+++ b/Robust_Portfolio.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Robust Portfolio Optimization\n",
-    "We use the returns of six portfolios formed on size and book-to-market (2$\\times$3) obtained from Kenneth French's website. \n",
+    "We use the returns of the six portfolios formed on size and book-to-market ratio (2$\\times$3) obtained from Kenneth French's website. \n",
     "We choose monthly returns from 1984 January to 2014 January. \n",
     "This gives us a total of $N=360$ return realizations for each of the six portfolios.\n",
     "\n",
