--- a/Robust_Portfolio.ipynb
+++ b/Robust_Portfolio.ipynb
@@ -10,14 +10,14 @@
     "We choose monthly returns from 1984 January to 2014 January. \n",
     "This gives us a total of $N=360$ return realizations for each of the six portfolios.\n",
     "\n",
-    "Let $\\mathbf{a}\\in \\mathbb{R}^6$ be an investment strategy on the six portfolios, subject to the constraints $a_i\\geq 0, \\sum^6_{i=1}a_i=1$. Let $\\mathbf{R}$ be a $360\\times 6$ matrix with $\\mathbf{r}_1,\\ldots,\\mathbf{r}_{360}\\in \\mathbb{R}^6$ the vectors of realizations of returns for all six portfolios. For each realization $\\mathbf{r}_i$, the wealth level after a single period is defined as $1+\\mathbf{a}^T\\mathbf{r}_i$. We consider the following worst-case risk evaluation minimization problem \n",
+    "Let $\\mathbf{a}\\in \\mathbb{R}^6$ be an investment strategy on the six portfolios, subject to the constraints $a_i\\geq 0, \\sum^6_{i=1}a_i=1$. Let $\\mathbf{R}$ be a $360\\times 6$ matrix with $\\mathbf{r}_1,\\ldots,\\mathbf{r}_{360}\\in \\mathbb{R}^6$ the vectors of realizations of returns for all six portfolios. For each realization $\\mathbf{r}_i$, the wealth level after a single period is defined as $1+\\mathbf{a}^T\\mathbf{r}_i$. We consider the following worst-case risk evaluation minimization problem: \n",
     "\\begin{align}\n",
     "\\begin{split}\n",
     "\\min_{\\mathbf{a}\\in \\mathbb{R}^{6},\\mathbf{a}\\geq \\mathbf{0}, c\\in \\mathbb{R}}\\left\\{c~\\middle|~\\sup_{(\\mathbf{q},\\bar{\\mathbf{q}})\\in U_{\\phi,h}(\\mathbf{p})}-\\sum^{360}_{i=1}\\bar{q}_iu(1+\\mathbf{a}^T\\mathbf{r}_i)\\leq c,\\sum^6_{i=1}a_i=1\\right\\},   \n",
     "\\end{split}\n",
     "\\end{align}\n",
     "where we choose the modified chi-squared function $\\phi(x)=(x-1)^2$ with radius $r=\\frac{1}{N}\\chi^2_{359,0.95}$. Furthermore, we choose $h(p)=1-(1-p)^2,~p\\in[0,1]$ as the distortion function and $u(x)=1-e^{-x/\\lambda}$ with $\\lambda=10$ the exponential utility function.\n",
-    "The solution of this problem will be compared to the nominal risk evaluation minimization problem, where the nominal probability is the uniform distirbution $p_i=\\frac{1}{360}$.\n",
+    "The solution of this problem will be compared to the nominal risk evaluation minimization problem, where the nominal probability is the uniform distirbution $p_i=\\frac{1}{360}$:\n",
     "\\begin{align}\n",
     "\\begin{split}\n",
     "\\min_{\\mathbf{a}\\in \\mathbb{R}^6,\\mathbf{a}\\geq \\mathbf{0}, c\\in \\mathbb{R}}\\left\\{c~\\middle|~\\sup_{\\bar{\\mathbf{q}}\\in M_h(\\mathbf{p})}-\\sum^{360}_{i=1}\\bar{q}_iu(1+\\mathbf{a}^T\\mathbf{r}_i)\\leq c, \\sum^6_{i=1}a_i=1,\\right\\}.    \n",
